--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <li class="item team__item">
               <img
                 src="./images/mark-guerrero.jpg"
-                alt="Product Designer"
+                alt="Product Designer - Mark Guerrero"
                 width="264" />
               <div class="team__item-wrap">
                 <h3 class="team--member">Mark Guerrero</h3>
@@ -116,7 +116,7 @@
             <li class="item team__item">
               <img
                 src="./images/tom-ford.jpg"
-                alt="Frontend Developer"
+                alt="Frontend Developer - Tom Ford"
                 width="264" />
               <div class="team__item-wrap">
                 <h3 class="team--member">Tom Ford</h3>
@@ -126,7 +126,7 @@
             <li class="item team__item">
               <img
                 src="./images/camila-garcia.jpg"
-                alt="Marketing"
+                alt="Marketing - Camila Garcia"
                 width="264" />
               <div class="team__item-wrap">
                 <h3 class="team--member">Camila Garcia</h3>
@@ -136,7 +136,7 @@
             <li class="item team__item">
               <img
                 src="./images/daniel-wilson.jpg"
-                alt="UI Designer"
+                alt="UI Designer - Daniel Wilson"
                 width="264" />
               <div class="team__item-wrap">
                 <h3 class="team--member">Daniel Wilson</h3>
@@ -154,7 +154,7 @@
             <li class="item portfolio__item">
               <img
                 src="./images/banking-app.jpg"
-                alt="banking app"
+                alt="Banking App"
                 width="360"
                 height="300" />
               <div class="portfolio__item-wrap">
@@ -165,7 +165,7 @@
             <li class="item portfolio__item">
               <img
                 src="./images/cashless-payment.jpg"
-                alt="cashless payment"
+                alt="Cashless Payment"
                 width="360"
                 height="300" />
               <div class="portfolio__item-wrap">
@@ -176,7 +176,7 @@
             <li class="item portfolio__item">
               <img
                 src="./images/meditation-app.jpg"
-                alt="meditation app"
+                alt="Meditation App"
                 width="360"
                 height="300" />
               <div class="portfolio__item-wrap">
@@ -187,7 +187,7 @@
             <li class="item portfolio__item">
               <img
                 src="./images/taxi-service.jpg"
-                alt="taxi service"
+                alt="Taxi Service"
                 width="360"
                 height="300" />
               <div class="portfolio__item-wrap">
@@ -198,7 +198,7 @@
             <li class="item portfolio__item">
               <img
                 src="./images/screen-illustrations.jpg"
-                alt="screen illustrations"
+                alt="Screen Illustrations"
                 width="360"
                 height="300" />
               <div class="portfolio__item-wrap">
@@ -209,7 +209,7 @@
             <li class="item portfolio__item">
               <img
                 src="./images/online-courses.jpg"
-                alt="online courses"
+                alt="Online Courses"
                 width="360"
                 height="300" />
               <div class="portfolio__item-wrap">
